--- a/parcel-app/src/index.html
+++ b/parcel-app/src/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Filestream.link</title>
   </head>
-  <body >
+  <body class="bg-gray-800" >
     <div id="app"></div>
     <script type="module" src="index.tsx"></script>
   </body>
